update document of ragit-server
Also renamed `ChunkSimple` to `ChunkDetail`. It's not simple!
